test/t.yml
apiVersion: v1
kind: Pod
metadata:
  name: test-karpenter-pod
  namespace: default
  labels:
    app: test-karpenter
spec:
  containers:
  - name: test-container
    image: nginx:latest
    resources:
      requests:
        cpu: "200m"
        memory: "0.5Gi"
      limits:
        cpu: "1"
        memory: "1Gi"
  terminationGracePeriodSeconds: 0
